# uivi

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  README.md  pyproject.toml
uivi/: banana.py  data_utils.py  hmc.py  plot_utils.py  train.py  ui_encoder.py  ui_vae.py  uivi_banana.ipynb  uivi_vae.ipynb  vae.py
uivi/models/: ui_encoder.py  ui_vae.py  vae.py
uivi/utils/: plot_utils.py
